--- a/style.css
+++ b/style.css
@@ -1,21 +1,3 @@
-.user-name {
+.header-text {
     text-align: center;
-    font-size: 50px;
-}
-
-.bands {
-    font-size: 30px;
-}
-
-.not-included {
-    text-decoration: line-through;
-}
-
-.section {
-    background-color: green;
-    color: white;
-}
-
-.details-list {
-    font-size: 25px;
 }
