--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
 .header-text {
     text-align: center;
 }
+
+.green-section {
+background-color: green;
+color: white;
+}
+
+.section-title{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.cyan {
+   color: cyan;
+}
+
+.cross-off {
+    text-decoration-line: line-through;
+}
+a{
+    text-decoration: none;
+}
